minor alterations in html and css

--- a/imports/ui/pages/myclasses/myClasses.html
+++ b/imports/ui/pages/myclasses/myClasses.html
@@ -2,7 +2,7 @@
     {{#onLoaded loaded=componentsLoaded}}
         <div class="row d-flex justify-content-end align-items-center mr-1 ">
             {{# button data-toggle="modal" data-target="#add-course-modal" size="sm"
-                       class="add-new-course-button"}}
+                       class="bg-primary border-primary"}}
                 <span>{{i18n "pages.myClasses.addNew"}}</span>
             {{/button}}
         </div>
