--- a/imports/ui/pages/class/class.html
+++ b/imports/ui/pages/class/class.html
@@ -1,3 +1,24 @@
 <template name="class">
+    <h4>{{i18n "dashboard.timeline"}}</h4>
 
+    <div id="visualization-target"></div>
+    <canvas id="visualization-canvas"></canvas>
+
+    <h4>{{i18n "dashboard.competencies"}}</h4>
+
+    {{#each competencyCategory in allCategories}}
+        {{> competencyCategoryForCourse competencyCategory}}
+    {{/each}}
+</template>
+
+<template name="competencyCategoryForCourse">
+    competency category
+
+    {{#each competency in this.competencies}}
+        {{> competencyForCourse competency}}
+    {{/each}}
+</template>
+
+<template name="competencyForCourse">
+    competency
 </template>
